chore: refine naming and bump to 1.0.3